--- a/media.html
+++ b/media.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Media and film work by Jose-Maria Kimburi.">
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/FAVICON.png" type="image/png">
+  <link rel="icon" href="my-website/Assets/FAVICON.png" type="image/png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -152,3 +152,4 @@
 
 </body>
 </html>
+
