--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
     <!-- Hero gallery -->
     <section class="heroGallery" aria-label="Gallery of images">
-      <img src="assets/Jose direct.jpg" alt="Gallery image 1">
-      <img src="assets/group looking into camera.jpg" alt="Gallery image 2">
-      <img src="assets/Jose looking away.jpg" alt="Gallery image 3">
+      <img src="my-website/Assets/Jose direct.jpg" alt="Gallery image 1">
+      <img src="my-website/Assets/group looking into camera.jpg" alt="Gallery image 2">
+      <img src="my-website/Assets/Jose looking away.jpg" alt="Gallery image 3">
     </section>
 
     <!-- Hero name & signature -->
@@ -150,6 +150,7 @@
 
 </body>
 </html>
+
 
 
 
