--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Author & Filmmaker">
 
   <!-- Favicon -->
-  <link rel="icon" href="Assets/FAVICON.png" type="image/png">
+  <link rel="icon" href="my-website/ Assets/ FAVICON.png" type="image/png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -150,6 +150,7 @@
 
 </body>
 </html>
+
 
 
 
