--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Author & Filmmaker">
 
   <!-- Favicon -->
-  <link rel="icon" href="my-website / Assets / FAVICON.png" type="image/png">
+  <link rel="icon" href="my-website/assets/favicon.png" type="image/png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -92,9 +92,9 @@
 
     <!-- Hero gallery -->
     <section class="heroGallery" aria-label="Gallery of images">
-      <img src="my-website/ Assets/ Jose direct.jpg" alt="Gallery image 1">
-      <img src="my-website/ Assets/ group looking into camera.jpg" alt="Gallery image 2">
-      <img src="my-website/ Assets/ Jose looking away.jpg" alt="Gallery image 3">
+      <img src="my-website/Assets/jose direct.jpg" alt="Gallery image 1">
+      <img src="my-website/Assets/group looking into camera.jpg" alt="Gallery image 2">
+      <img src="my-website/Assets/jose looking away.jpg" alt="Gallery image 3">
     </section>
 
     <!-- Hero name & signature -->
@@ -150,6 +150,7 @@
 
 </body>
 </html>
+
 
 
 
