--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Author & Filmmaker">
 
   <!-- Favicon -->
-  <link rel="icon" href="Assets/favicon.png" type="image/png">
+<link rel="icon" href="Assets/favicon.png" type="image/png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
@@ -91,11 +91,11 @@
   <main class="container">
 
     <!-- Hero gallery -->
-    <section class="heroGallery" aria-label="Gallery of images">
-      <img src="assets/direct.jpg" alt="Gallery image 1">
-      <img src="assets/group.jpg" alt="Gallery image 2">
-      <img src="assets/away.jpg" alt="Gallery image 3">
-    </section>
+   <section class="heroGallery" aria-label="Gallery of images">
+  <img src="Assets/direct.jpg" alt="Gallery image 1">
+  <img src="Assets/group.jpg" alt="Gallery image 2">
+  <img src="Assets/away.jpg" alt="Gallery image 3">
+</section>
 
     <!-- Hero name & signature -->
     <section class="heroName">
@@ -150,6 +150,7 @@
 
 </body>
 </html>
+
 
 
 
