--- a/books.html
+++ b/books.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Books by Jose-Maria Kimburi. Read blurbs, view details and open a live Amazon page for each title.">
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/FAVICON.png" type="image/png">
+  <link rel="icon" href="Assets/favicon.png" type="image/png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Mrs+Saint+Delafield&family=Bitter:wght@100&display=swap" rel="stylesheet">
@@ -104,7 +104,7 @@
     <section class="booksList">
       <article class="bookRow">
         <div class="cover">
-          <img src="assets/18 REFLECTIONS KINDLE.jpg" alt="18 Reflections book cover">
+          <img src="Assets/bookcover.jpg" alt="18 Reflections book cover">
         </div>
         
         <div class="meta">
@@ -134,3 +134,4 @@
 
 </body>
 </html>
+
