--- a/media.html
+++ b/media.html
@@ -113,7 +113,7 @@
             </div>
             <div class="videoMeta">
               <h3>BioVerse TV: Unplugging from Social Media | Jessica Bennett!</h3>
-              <p class="muted">A 20 minute interview discussing the themes of the latest book and documentary process.</p>
+              <p class="muted">In this short snippet from BioVerse TV: Unplugging from Social Media, Jessica shares her personal experience of stepping away from constant digital stimulation and rediscovering peace through time spent outdoors.</p>
               <div class="actions">
                 <a class="btn btnPrimary" href="https://youtu.be/XykgaUQwXy4?si=oX1gL6idvL12PLXt" target="_blank" rel="noopener noreferrer">Open on YouTube</a>
               </div>
@@ -152,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
