--- a/books.html
+++ b/books.html
@@ -112,7 +112,7 @@
           <h5 class="bookSubtitle"><i>Divides, Epidemics and the Generation Caught in Between</i></h5>
           <p>18 Reflections is Kimburi's debut book, written to articulate the complex realities faced by his generation as they grow up amid social, environmental, economic and health challenges.</p>
           <p>Through eighteen thought-provoking chapters, Kimburi explores the divides and epidemics shaping Gen Z – mental health, identity, faith, burnout, inequality and more. Each chapter begins with an anecdote, offering critical context to anchor the reflection.</p>
-          <p>I wrote this because I needed to. Because silence didn’t feel like an option anymore. Silence has a cost. I was tired of paying it.</p>
+          <p>He wrote this because he needed to. Because silence didn’t feel like an option anymore. Silence has a cost. And he was tired of paying it.</p>
           <p><i>This is the book many of us needed when we were fourteen. It’s the one many of us still need now.</i></p>
           <p>Release date: XX.XX.2025
             <br>
@@ -134,4 +134,5 @@
 
 </body>
 </html>
+
 
