--- a/media.html
+++ b/media.html
@@ -98,7 +98,7 @@
               <iframe loading="lazy" src="https://www.youtube.com/embed/ul8YApOvM2c?si=_858SxjHbDiN-DzA" title="Short documentary trailer" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="videoMeta">
-              <h3>BioVerse TV: Unplugging from Social Media | Lucy Lapwing!</h3>
+              <h3>BioVerse TV: Unplugging from Social Media | Official Teaser 2 | Lucy Lapwing</h3>
               <p class="muted">Lucy Lapwing, one of the faces of BBC Springwatch, joins BioVerse TV: Unplugging from Social Media, sharing her experiences and expertise.</p>
               <div class="actions">
                 <a class="btn btnPrimary" href="https://youtu.be/ul8YApOvM2c?si=_858SxjHbDiN-DzA" target="_blank" rel="noopener noreferrer">Open on YouTube</a>
@@ -112,7 +112,7 @@
               <iframe loading="lazy" src="https://www.youtube.com/embed/XykgaUQwXy4?si=oX1gL6idvL12PLXt" title="Interview about book themes" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="videoMeta">
-              <h3>BioVerse TV: Unplugging from Social Media | Jessica Bennett!</h3>
+              <h3>BioVerse TV: Unplugging from Social Media | Official Teaser 1 | Jessica Bennett</h3>
               <p class="muted">In this short snippet from BioVerse TV: Unplugging from Social Media, Jessica shares her personal experience of stepping away from constant digital stimulation and rediscovering peace through time spent outdoors.</p>
               <div class="actions">
                 <a class="btn btnPrimary" href="https://youtu.be/XykgaUQwXy4?si=oX1gL6idvL12PLXt" target="_blank" rel="noopener noreferrer">Open on YouTube</a>
