--- a/books.html
+++ b/books.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="Assets/favicon.png" type="image/png">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Mrs+Saint+Delafield&family=Bitter:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Mrs+Saint+Delafield&family=Cedarville+Cursive&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -52,8 +52,8 @@
     .meta { padding: 1rem; background: var(--card); border-radius: var(--radius); display: flex; flex-direction: column; justify-content: center; }
 
     .meta h2.bookTitle { 
-      font-family: 'Bitter', serif; 
-      font-weight: 100; 
+      font-family: 'Cedarville Cursive', cursive; 
+      font-weight: normal; 
       font-size: 2.5rem; 
       color: #fff; 
       text-align: center; 
@@ -134,5 +134,3 @@
 
 </body>
 </html>
-
-
