--- a/books.html
+++ b/books.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="Assets/favicon.png" type="image/png">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Mrs+Saint+Delafield&family=Cedarville+Cursive&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -54,20 +54,20 @@
     .meta h2.bookTitle { 
       font-family: 'Cedarville Cursive', cursive; 
       font-weight: normal; 
-      font-size: 2.5rem; 
+      font-size: 2.7rem; 
       color: #fff; 
       text-align: center; 
-      margin-bottom: 0.25rem; 
+      margin-bottom: 0.35rem; 
     }
 
     .meta h5.bookSubtitle { 
-      font-family: var(--font); 
-      font-size: 1.25rem; 
+      font-family: 'Cedarville Cursive', cursive; 
+      font-size: 1.9rem;   /* increased for better balance */
       color: #fff; 
       font-weight: normal; 
       font-style: normal; 
       text-align: center; 
-      margin-bottom: 1rem; 
+      margin-bottom: 1.2rem; 
     }
 
     .meta p { margin-bottom: .75rem; color: #fff; }
@@ -109,7 +109,7 @@
         
         <div class="meta">
           <h2 class="bookTitle">18 Reflections</h2>
-          <h5 class="bookSubtitle"><i>Divides, Epidemics and the Generation Caught in Between</i></h5>
+          <h5 class="bookSubtitle">Divides, Epidemics and the Generation Caught in Between</h5>
           <p>18 Reflections is Kimburi's debut book, written to articulate the complex realities faced by his generation as they grow up amid social, environmental, economic and health challenges.</p>
           <p>Through eighteen thought-provoking chapters, Kimburi explores the divides and epidemics shaping Gen Z – mental health, identity, faith, burnout, inequality and more. Each chapter begins with an anecdote, offering critical context to anchor the reflection.</p>
           <p>He wrote this because he needed to. Because silence didn’t feel like an option anymore. Silence has a cost. And he was tired of paying it.</p>
