--- a/books.html
+++ b/books.html
@@ -62,8 +62,8 @@
 
     .meta h5.bookSubtitle { 
       font-family: 'Cedarville Cursive', cursive; 
-      font-size: 1.9rem; 
-      color: #ccc;   /* lighter grey for contrast */
+      font-size: 1.6rem;   /* smaller size */
+      color: #ccc; 
       font-weight: normal; 
       font-style: normal; 
       text-align: center; 
