--- a/books.html
+++ b/books.html
@@ -108,7 +108,7 @@
         </div>
         
         <div class="meta">
-          <h2 class="bookTitle">18 REFLECTIONS</h2>
+          <h2 class="bookTitle">18 Reflections</h2>
           <h5 class="bookSubtitle">Divides, Epidemics and the Generation Caught in Between</h5>
           <p>18 Reflections is Kimburi's debut book, written to articulate the complex realities faced by his generation as they grow up amid social, environmental, economic and health challenges.</p>
           <p>Through eighteen thought-provoking chapters, Kimburi explores the divides and epidemics shaping Gen Z – mental health, identity, faith, burnout, inequality and more. Each chapter begins with an anecdote, offering critical context to anchor the reflection.</p>
