--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
     <section class="homeBubbles">
       <div class="bubbleCard" onclick="location.href='books.html'">
         <h3>Books</h3>
-        <p>Explore the books Kimburi has authored.</p>
+        <p>Explore the books Kimburi has authored as well his upcoming publications.</p>
       </div>
       <div class="bubbleCard" onclick="location.href='media.html'">
         <h3>Media</h3>
-        <p>Explore the documentaries, series and docuseries Kimburi has produced and directed.</p>
+        <p>Explore the documentaries, series and docuseries Kimburi has produced and directed as well as his upcoming projects.</p>
       </div>
     </section>
 
@@ -150,6 +150,7 @@
 
 </body>
 </html>
+
 
 
 
