--- a/media.html
+++ b/media.html
@@ -87,7 +87,7 @@
         <div class="mediaMeta">
           <div class="metaLeft">
             <strong>BioVerse TV: Unplugging from Social Media</strong>
-            <p class="muted">Take a look at my <i>debut documentary<i>.</p>
+            <p class="muted">Take a look at my debut documentary.</p>
           </div>
         </div>
 
