--- a/media.html
+++ b/media.html
@@ -125,13 +125,13 @@
           <!-- Video 3 -->
           <article class="videoItem">
             <div class="videoWrap">
-              <iframe loading="lazy" src="https://youtube.com/playlist?list=PL41K9nC7wl_5xKXk1wzwWH9q_zfBZJ7tf&si=wNtbemJS_lwixwNx" title="Trailer for feature series" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe loading="lazy" src="https://youtu.be/ejZUEKCKmsM?si=e3BwQzGDGzeDpe9Z" title="Trailer for feature series" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="videoMeta">
               <h3>BioVerse TV: Unplugging from Social Media | Official Documentary Trailer - 11/10/25</h3>
               <p class="muted">This documentary explores the mental health benefits of stepping away from the digital world and rediscovering the natural world around us. <br> Full documentary out on Saturday 25th October 2025 at 18:00 BST.</p>
               <div class="actions">
-                <a class="btn btnPrimary" href="https://youtube.com/playlist?list=PL41K9nC7wl_5xKXk1wzwWH9q_zfBZJ7tf&si=wNtbemJS_lwixwNx" target="_blank" rel="noopener noreferrer">Open on YouTube</a>
+                <a class="btn btnPrimary" href="https://youtu.be/ejZUEKCKmsM?si=e3BwQzGDGzeDpe9Z" target="_blank" rel="noopener noreferrer">Open on YouTube</a>
               </div>
             </div>
           </article>
@@ -154,6 +154,7 @@
 
 </body>
 </html>
+
 
 
 
