--- a/media.html
+++ b/media.html
@@ -96,7 +96,7 @@
           <!-- Video 1 -->
           <article class="videoItem">
             <div class="videoWrap">
-              <iframe loading="lazy" src="https://www.youtube.com/embed/XykgaUQwXy4?si=oX1gL6idvL12PLXt" title="Interview about book themes" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe loading="lazy" src="https://www.youtube.com/embed/XykgaUQwXy4?si=oX1gL6idvL12PLXt" title="BioVerse TV: Unplugging from Social Media | Official Teaser 1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="videoMeta">
               <h3>BioVerse TV: Unplugging from Social Media | Official Teaser 1</h3>
@@ -111,7 +111,7 @@
           <!-- Video 2 -->
           <article class="videoItem">
             <div class="videoWrap">
-              <iframe loading="lazy" src="https://www.youtube.com/embed/ul8YApOvM2c?si=_858SxjHbDiN-DzA" title="Short documentary trailer" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe loading="lazy" src="https://www.youtube.com/embed/ul8YApOvM2c?si=_858SxjHbDiN-DzA" title="BioVerse TV: Unplugging from Social Media | Official Teaser 2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="videoMeta">
               <h3>BioVerse TV: Unplugging from Social Media | Official Teaser 2</h3>
@@ -125,16 +125,17 @@
           <!-- Video 3 -->
           <article class="videoItem">
             <div class="videoWrap">
-              <iframe loading="lazy" src="https://youtu.be/ejZUEKCKmsM?si=e3BwQzGDGzeDpe9Z" title="Trailer for feature series" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe loading="lazy" src="https://youtu.be/ejZUEKCKmsM?si=e3BwQzGDGzeDpe9Z" title="BioVerse TV: Unplugging from Social Media | Official Documentary Trailer" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="videoMeta">
-              <h3>BioVerse TV: Unplugging from Social Media | Official Documentary Trailer - 11/10/25</h3>
+              <h3>BioVerse TV: Unplugging from Social Media | Official Documentary Trailer | 11/10/25</h3>
               <p class="muted">This documentary explores the mental health benefits of stepping away from the digital world and rediscovering the natural world around us. <br> Full documentary out on Saturday 25th October 2025 at 18:00 BST.</p>
               <div class="actions">
                 <a class="btn btnPrimary" href="https://youtu.be/ejZUEKCKmsM?si=e3BwQzGDGzeDpe9Z" target="_blank" rel="noopener noreferrer">Open on YouTube</a>
               </div>
             </div>
           </article>
+          
         </div>
       </div>
 
@@ -154,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
