--- a/books.html
+++ b/books.html
@@ -116,10 +116,17 @@
           <p><i>This is the book many of us needed when we were fourteen. It’s the one many of us still need now.</i></p>
           <p>Release date: XX.XX.2026
             <br>
+            Platforms: Amazon, Apple Books, Google Play Books
             Formats: Paperback, Hardcover, Kindle</p>
           <div class="actions">
             <a href="https://www.amazon.co.uk/stores/Mr.-Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank" class="btn btnPrimary">View on Amazon</a>
           </div>
+
+          <div class="actions">
+            <a href="apple.com" target="_blank" class="btn btnPrimary">View on Apple Books</a>
+          </div>
+
+          
         </div>
       </article>
     </section>
@@ -134,4 +141,5 @@
 
 </body>
 </html>
+
 
