--- a/books.html
+++ b/books.html
@@ -116,7 +116,7 @@
           <p><i>This is the book many of us needed when we were fourteen. It’s the one many of us still need now.</i></p>
           <p>Release date: XX.XX.2026
             <br>
-            Formats: Paperback (Amazon), Hardcover (Amazon), eBook (Kindle, Apple Books, Google Play Books)</p>
+            Formats: Paperback & Hardcover (Amazon); eBook (Kindle, Apple Books, Google Play Books)</p>
           <div class="actions">
             <a href="https://www.amazon.co.uk/stores/Mr.-Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank" class="btn btnPrimary">View on Amazon</a>
           </div>
@@ -134,6 +134,7 @@
 
 </body>
 </html>
+
 
 
 
