--- a/books.html
+++ b/books.html
@@ -111,8 +111,7 @@
           <h2 class="bookTitle">18 Reflections</h2>
           <h5 class="bookSubtitle">Divides, Epidemics and the Generation Caught in Between</h5>
           <p>18 Reflections is Kimburi's debut book, written to articulate the complex realities faced by his generation as they grow up amid social, environmental, economic and health challenges.</p>
-          <p>Through eighteen thought-provoking chapters, Kimburi explores the divides and epidemics shaping Gen Z – mental health, identity, faith, burnout, inequality and more. Each chapter begins with an anecdote, offering critical context to anchor the reflection.</p>
-          <p>He wrote this because he needed to. Because silence didn’t feel like an option anymore. Silence has a cost. And he was tired of paying it.</p>
+          <p>Through eighteen thought-provoking chapters, Kimburi explores the divides and epidemics shaping Gen Z – mental health, identity, faith, burnout, inequality and more. Each chapter begins with an anecdote, offering critical context to anchor the reflection. He wrote this because he needed to. Because silence didn’t feel like an option anymore. Silence has a cost. And he was tired of paying it.</p>
           <p><i>This is the book many of us needed when we were fourteen. It’s the one many of us still need now.</i></p>
           <p>Release date: XX.XX.2026
             <br>
@@ -134,6 +133,7 @@
 
 </body>
 </html>
+
 
 
 
