--- a/books.html
+++ b/books.html
@@ -115,7 +115,7 @@
           <p><i>This is the book many of us needed when we were fourteen. It’s the one many of us still need now.</i></p>
           <p>Release date: XX.XX.2026
             <br>
-            Formats: Paperback & Hardcover (Amazon); eBook (Kindle, Apple, Google Play)</p>
+            Formats: Paperback, Hardcover & eBook (Kindle) (Apple, Amazon)</p>
           <div class="actions">
             <a href="https://www.amazon.co.uk/stores/Mr.-Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank" class="btn btnPrimary">View on Amazon</a>
           </div>
@@ -133,6 +133,7 @@
 
 </body>
 </html>
+
 
 
 
