--- a/books.html
+++ b/books.html
@@ -116,9 +116,19 @@
           <p>Release date: XX.XX.2026
             <br>
             Formats: Paperback, Hardcover & eBook (Kindle) (Apple, Amazon)</p>
-          <div class="actions">
-            <a href="https://www.amazon.co.uk/stores/Mr.-Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank" class="btn btnPrimary">View on Amazon</a>
-          </div>
+          
+        <div class="actions">
+  <a href="https://www.amazon.co.uk/stores/Mr.-Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" 
+     target="_blank" class="btn btnPrimary">View on Amazon</a>
+  
+  <a href="https://books.apple.com" 
+     target="_blank" class="btn btnPrimary">View on Apple Books</a>
+  
+  <a href="https://play.google.com/store/books" 
+     target="_blank" class="btn btnPrimary">View on Google Play</a>
+</div>
+
+          
         </div>
       </article>
     </section>
@@ -133,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
