--- a/books.html
+++ b/books.html
@@ -115,20 +115,18 @@
           <p><i>This is the book many of us needed when we were fourteen. It’s the one many of us still need now.</i></p>
           <p>Release date: XX.XX.2026
             <br>
-            Formats: Paperback, Hardcover & eBook (Kindle) (Apple, Amazon)</p>
+            Formats: Paperback, Hardcover & eBook (Amazon Kindle, Apple, Google Play)</p>
           
         <div class="actions">
-  <a href="https://www.amazon.co.uk/stores/Mr.-Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" 
+  <a href="https://www.amazon.co.uk/stores/Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" 
      target="_blank" class="btn btnPrimary">View on Amazon</a>
   
-  <a href="https://books.apple.com" 
+  <a href="https://books.apple.com/us/book/18-reflections-divides-epidemics-and-the/id6752995264" 
      target="_blank" class="btn btnPrimary">View on Apple Books</a>
   
   <a href="https://play.google.com/store/books" 
-     target="_blank" class="btn btnPrimary">View on Google Play</a>
+     target="_blank" class="btn btnPrimary">View on Google Play Books</a>
 </div>
-
-          
         </div>
       </article>
     </section>
@@ -143,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
