--- a/books.html
+++ b/books.html
@@ -119,13 +119,13 @@
           
         <div class="actions">
   <a href="https://www.amazon.co.uk/stores/Jose-Maria-Kimburi/author/B0FLM5L52Y?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" 
-     target="_blank" class="btn btnPrimary">View on Amazon</a>
+     target="_blank" class="btn btnPrimary">Amazon</a>
   
   <a href="https://books.apple.com/us/book/18-reflections-divides-epidemics-and-the/id6752995264" 
-     target="_blank" class="btn btnPrimary">View on Apple Books</a>
+     target="_blank" class="btn btnPrimary">Apple Books</a>
   
   <a href="https://play.google.com/store/books" 
-     target="_blank" class="btn btnPrimary">View on Google Play Books</a>
+     target="_blank" class="btn btnPrimary">Google Play Books</a>
 </div>
         </div>
       </article>
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
