--- a/books.html
+++ b/books.html
@@ -122,10 +122,10 @@
      target="_blank" class="btn btnPrimary">Amazon</a>
   
   <a href="https://books.apple.com/us/book/18-reflections-divides-epidemics-and-the/id6752995264" 
-     target="_blank" class="btn btnPrimary">Apple Books</a>
+     target="_blank" class="btn btnPrimary">Apple</a>
   
   <a href="https://play.google.com/store/books" 
-     target="_blank" class="btn btnPrimary">Google Play Books</a>
+     target="_blank" class="btn btnPrimary">Google Play</a>
 </div>
         </div>
       </article>
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
