--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="Eq5-64xQ4vvqTXKWhxd85ZfezyjG-15RQ_2VXbMIxR0" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Jose-Maria Kimburi</title>
@@ -252,3 +253,4 @@
 
 </body>
 </html>
+
