--- a/books.html
+++ b/books.html
@@ -18,13 +18,13 @@
 
   <!-- Social / sharing metadata (Open Graph and Twitter) -->
   <meta property="og:type" content="book">
-  <meta property="og:title" content="18 Reflections — Jose-Maria Kimburi">
+  <meta property="og:title" content="18 Reflections | Jose-Maria Kimburi">
   <meta property="og:description" content="18 Reflections by Jose-Maria Kimburi.">
   <meta property="og:url" content="https://www.j-mk.com/books/">
   <meta property="og:image" content="https://www.j-mk.com/Assets/bookcover.jpg">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="18 Reflections — Jose-Maria Kimburi">
+  <meta name="twitter:title" content="18 Reflections | Jose-Maria Kimburi">
   <meta name="twitter:description" content="18 Reflections by Jose-Maria Kimburi.">
   <meta name="twitter:image" content="https://www.j-mk.com/Assets/bookcover.jpg">
 
@@ -264,3 +264,4 @@
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 </body>
 </html>
+
