--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <!-- Open Graph & Twitter card for richer sharing -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Jose-Maria Kimburi">
-  <meta property="og:description" content="Author & Filmmaker — Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
+  <meta property="og:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
   <meta property="og:url" content="https://www.j-mk.com/">
   <meta property="og:image" content="https://www.j-mk.com/Assets/away.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Jose-Maria Kimburi">
-  <meta name="twitter:description" content="Author & Filmmaker — Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
+  <meta name="twitter:description" content="Author & Filmmaker | Jose-Maria Kimburi. Books, films and projects including 18 Reflections and BioVerse TV.">
   <meta name="twitter:image" content="https://www.j-mk.com/Assets/away.jpg">
 
   <!-- Favicon -->
@@ -219,14 +219,14 @@
         "@id": "https://www.j-mk.com/#person",
         "name": "Jose-Maria Kimburi",
         "alternateName": ["Jose-Maria","Jose Kimburi","Kimburi J","Kimburi","J Kimburi","J-MK","JKimburi","J-Mk"],
-        "jobTitle": "Author, Filmmaker, Geographer",
+        "jobTitle": "Author & Filmmaker",
         "url": "https://www.j-mk.com/",
         "image": "https://www.j-mk.com/Assets/away.jpg",
         "sameAs": [
           "https://www.instagram.com/JKimburi"
           /* add other social profiles here */
         ],
-        "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Author of 18 Reflections and director of BioVerse TV."
+        "description": "Jose-Maria Kimburi is an author and filmmaker whose work explores human and physical change through geography. Author of 18 Reflections and executive producer & director of BioVerse TV."
       },
       {
         "@type": "WebSite",
@@ -253,4 +253,5 @@
 
 </body>
 </html>
+
 
