--- a/media.html
+++ b/media.html
@@ -17,12 +17,12 @@
   <!-- Open Graph & Twitter card for richer sharing -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Media | Jose-Maria Kimburi">
-  <meta property="og:description" content="Media and film work by Jose-Maria Kimburi, including BioVerse TV: Unplugging from Social Media and official teasers.">
+  <meta property="og:description" content="Media and film work by Jose-Maria Kimburi, including BioVerse TV: Unplugging from Social Media.">
   <meta property="og:url" content="https://www.j-mk.com/media/">
   <meta property="og:image" content="https://www.j-mk.com/Assets/direct.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Media | Jose-Maria Kimburi">
-  <meta name="twitter:description" content="Media and film work by Jose-Maria Kimburi, including BioVerse TV: Unplugging from Social Media and official teasers.">
+  <meta name="twitter:description" content="Media and film work by Jose-Maria Kimburi, including BioVerse TV: Unplugging from Social Media.">
   <meta name="twitter:image" content="https://www.j-mk.com/Assets/direct.jpg">
 
   <!-- Favicon -->
@@ -127,7 +127,7 @@
 
     <!-- Visually hidden aliases for accessibility and natural discovery -->
     <div class="sr-only" aria-hidden="false">
-      Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi J, Kimburi, J Kimburi, J-MK, JKimburi, 18 Reflections, BioVerse TV, BioVerse TV Unplugging from Social Media, BioVerse documentary
+      Jose-Maria, Jose Kimburi, Jose-Maria Kimburi, Kimburi J, Kimburi, J Kimburi, J-MK, JKimburi, 18 Reflections, BioVerse TV, BioVerse TV Unplugging from Social Media, BioVerse TV, BioVerse documentary
     </div>
 
     <section class="grid">
@@ -229,7 +229,7 @@
         "@id": "https://www.j-mk.com/#person",
         "name": "Jose-Maria Kimburi",
         "alternateName": ["Jose-Maria","Jose Kimburi","Kimburi J","Kimburi","J Kimburi","J-MK","JKimburi","J-Mk"],
-        "jobTitle": "Author, Filmmaker, Geographer",
+        "jobTitle": "Author & Filmmaker",
         "url": "https://www.j-mk.com/",
         "image": "https://www.j-mk.com/Assets/direct.jpg",
         "sameAs": [
@@ -297,3 +297,4 @@
 
 </body>
 </html>
+
