--- a/books.html
+++ b/books.html
@@ -236,7 +236,7 @@
           "https://www.j-mk.com/",
           "https://www.instagram.com/JKimburi"
         ],
-        "jobTitle": "Author, Filmmaker, Geographer"
+        "jobTitle": "Author & Filmmaker"
       },
       {
         "@type": "WebSite",
@@ -264,4 +264,5 @@
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 </body>
 </html>
+
 
